# DockView

./: .eslintrc.json  .gitignore  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  nightly.yml  release.yml  security.yml
src/: App.tsx  setupTests.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: docker.rs  events.rs  exec.rs  mod.rs  utils.rs
src-tauri/src/docker/: client.rs  containers.rs  context.rs  credentials.rs  error.rs  errors.rs  images.rs  mod.rs  models.rs  networks.rs  volumes.rs
src-tauri/src/docker/ops/: container_ops.rs  image_ops.rs  system_ops.rs
src-tauri/src/services/: backoff.rs  event_watcher.rs  mod.rs  stats_collector.rs
src-tauri/src/state/: app_state.rs  docker_state.rs  mod.rs
src-tauri/src/tests/: api_tests.rs  docker_integration.rs
src-tauri/tests/: api_tests.rs  docker_integration.rs
src/backend/: bridge.ts  docker.ts  index.ts  updater.ts  utils.ts
src/components/: Badge.tsx  Button.tsx  Cell.tsx  DropDown.tsx  MainContent.tsx  Modal.tsx  RowBtn.tsx  Sidebar.tsx  StatusBadge.tsx  Statusbar.tsx  Titlebar.tsx
src/components/BuildsViewComponents/: BuildsRow.tsx  DetailPanel.tsx  StatsBar.tsx
src/components/ComposeViewComponents/: DetailPanel.tsx  Modal.tsx  ServiceRow.tsx  StackCard.tsx  generateYaml.ts
src/components/ContainerViewComponents/: ContainerRow.tsx  PullModal.tsx  RunNewModal.tsx
src/components/ImageViewComponents/: CloseBtn.tsx  Config.ts  DetailsPanel.tsx  Helpers.tsx  ImageRow.tsx  Modal.tsx
src/components/NetworksViewComponents/: DetailPanel.tsx  Modal.tsx  NetworkRow.tsx
src/components/SideBarComponents/: Divider.tsx  NavItem.tsx  ResourceBar.tsx
src/components/VolumesViewComponents/: DetailPanel.tsx  Modal.tsx  VolumeRow.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  Titlebar.tsx
src/components/modals/: BuildModals.tsx  RegistryModals.tsx
src/components/shared/: ErrorBoundary.tsx  StatsCharts.tsx  ui.tsx  useResize.ts
src/components/views/: BuildView.tsx  ComposeView.tsx  ContainersView.tsx  ImagesView.tsx  NetworksView.tsx  OtherViews.tsx  PlaceholderView.tsx  RegistryView.tsx  SettingsView.tsx  TerminalView.tsx  VolumesView.tsx
src/hooks/: useKeyboardShortcuts.ts  useStatsHistory.ts
src/store/: appStore.ts  buildStore.ts  composeStore.ts  containerStore.ts  imageStore.ts  index.ts  logStore.ts  networkStore.ts  registryStore.ts  settingsStore.ts  terminalStore.ts  types.ts  volumeStore.ts
src/styles/: globals.css
