[package]
name = "dockview"
version = "0.1.0"
description = "A lightweight GUI for managing Docker containers, images, and networks—no Docker Desktop required. "
authors = ["Mke5"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
bollard = "0.18.1"
tauri-plugin-updater = "2"
tokio = { version = "1.42.0", features = ["sync", "process", "time", "io-util", "rt", "macros"] }
futures-util = "0.3.31"
anyhow = "1.0.94"
thiserror = "2.0.6"
keyring = "3.6.1"
uuid              = { version = "1",       features = ["v4"] }
chrono            = { version = "0.4",     features = ["serde"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3",   features = ["env-filter"] }
tauri-plugin-dialog = "2.7.1"
